ansible/roles/k3s/files/test-app.yml
# APP DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: testapp
  name: testapp
spec:
  replicas: 2
  selector:
    matchLabels:
      run: testapp
  template:
    metadata:
      labels:
        run: testapp
    spec:
      containers:
      - image: traefik/whoami
        imagePullPolicy: IfNotPresent
        name: testapp
        ports:
        - containerPort: 80
          protocol: TCP
---
# APP SERVICE
apiVersion: v1
kind: Service
metadata:
  labels:
    run: testapp
  name: testapp
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: testapp
  type: NodePort
# type: LoadBalancer
---
# APP INGRESS
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lb-ingress
spec:
  ingressClassName: haproxy
  defaultBackend:
    service:
      name: testapp
      port:
        number: 80
  rules:
  - host: test.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: testapp
            port:
              number: 80
