ansible/roles/k3s/files/test-green.yml
---
# APP Deployment with for green
apiVersion: apps/v1
kind: Deployment
metadata:
    name: test-app-green
    labels:
        app: test-app
        color: green
spec:
    replicas: 3
    selector:
        matchLabels:
            color: green
    template:
        metadata:
            labels:
                app: test-app
                color: green
        spec:
            # Set affinity to ensure that the green and green pods are not scheduled on the same node
            affinity:
                nodeAffinity:
                    requiredDuringSchedulingIgnoredDuringExecution:
                        nodeSelectorTerms:
                            - matchExpressions:
                                  - key: kubernetes.io/os
                                    operator: In
                                    values:
                                        - linux
            containers:
                - name: test-green
                  image: docker.io/kirbah/blue-green:green
                  ports:
                      - containerPort: 8080
                  resources:
                      requests:
                          cpu: 100m
                          memory: 128Mi
                      limits:
                          cpu: 200m
                          memory: 256Mi
---
# Service for green
apiVersion: v1
kind: Service
metadata:
    name: svc-green
    labels:
        color: green
spec:
    ports:
        - port: 80
          protocol: TCP
          targetPort: 8080
    selector:
        app: test-app
        color: green
---
# Service ingress for green
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: lb-ingress-green
spec:
    ingressClassName: haproxy
    # Rules to route green.local to green service
    rules:
        - host: green.local
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: svc-green
                            port:
                                number: 80
